crates/strider-analyze/tests/snapshots/v3__ppc32be__globals__runtime_const_idx.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "10" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ r9", shape=house, fillcolor="#163030"];
  "9" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "12" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x100007a4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "29" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "37" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "46" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
